--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: Build and Release
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main ]
-  release:
-    types: [ created ]
 
 jobs:
   test:
@@ -77,7 +77,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
     - uses: actions/checkout@v4
     
@@ -89,11 +89,13 @@ jobs:
     - name: Display structure of downloaded files
       run: ls -R artifacts
     
-    - name: Upload release assets
+    - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          artifacts/*/prompt-mcp-*.zip
-          artifacts/*/prompt-mcp-*.tar.gz
+          artifacts/*/prompt-mcp-*
+        generate_release_notes: true
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
